--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.4",
     "pug": "^3.0.2"
   },
   "devDependencies": {
